force-app/main/default/objects/SupplierLimitEdit__c/SupplierLimitEdit__c.object-meta.xml
<CustomObject>
    <label>Коригування лімітів постачальників</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierLimitEdit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>