force-app/main/default/objects/SupplierLimitEdit__c/fields/ActualLimit__c.field-meta.xml
<CustomField>
    <fullName>ActualLimit__c</fullName>
    <formula>SupplierLimitDetails__r.Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Актуальний ліміт</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>