force-app/main/default/objects/SupplierLimitEdit__c/fields/BaseDoc__c.field-meta.xml
<CustomField>
    <fullName>BaseDoc__c</fullName>
    <label>Підстава</label>
    <length>255</length>
    <type>Text</type>
</CustomField>