force-app/main/default/objects/SupplierLimitEdit__c/fields/BaseDocLink__c.field-meta.xml
<CustomField>
    <fullName>BaseDocLink__c</fullName>
    <formula>IF(NOT(ISBLANK(DocLinkId__c)),
HYPERLINK(&apos;https://interpipe--devsand.sandbox.my.salesforce.com/lightning/r/ContentDocument/&apos;+ DocLinkId__c +&apos;/view&apos;,&apos;Переглянути документ&apos;,&apos;_blank&apos;),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Підстава (документ)</label>
    <type>Text</type>
</CustomField>