force-app/main/default/objects/SupplierLimitEdit__c/fields/DecadeTxt__c.field-meta.xml
<CustomField>
    <fullName>DecadeTxt__c</fullName>
    <formula>SupplierLimitDetails__r.Decade__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Декада</label>
    <type>Text</type>
</CustomField>