force-app/main/default/objects/SupplierLimitEdit__c/fields/DeltaLimit__c.field-meta.xml
<CustomField>
    <fullName>DeltaLimit__c</fullName>
    <formula>NewLimit__c - OriginalLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Різниця лімітів</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>