force-app/main/default/objects/SupplierLimitEdit__c/fields/DocLinkId__c.field-meta.xml
<CustomField>
    <fullName>DocLinkId__c</fullName>
    <label>DocLinkId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>