force-app/main/default/objects/SupplierLimitEdit__c/fields/LimitType__c.field-meta.xml
<CustomField>
    <fullName>LimitType__c</fullName>
    <formula>ScrapSupplierLimit__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Type</label>
    <type>Text</type>
</CustomField>