force-app/main/default/objects/SupplierLimitEdit__c/fields/ModifiedByName__c.field-meta.xml
<CustomField>
    <fullName>ModifiedByName__c</fullName>
    <formula>LastModifiedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Хто змінив</label>
    <type>Text</type>
</CustomField>