force-app/main/default/objects/SupplierLimitEdit__c/fields/ModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDateTime__c</fullName>
    <formula>TEXT(DATEVALUE(LastModifiedDate)) &amp; &quot; &quot; &amp;
LPAD(TEXT(HOUR(TIMEVALUE(LastModifiedDate))), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
LPAD(TEXT(MINUTE(TIMEVALUE(LastModifiedDate))), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp;
LPAD(TEXT(SECOND(TIMEVALUE(LastModifiedDate))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Дата/час зміни</label>
    <type>Text</type>
</CustomField>