force-app/main/default/objects/SupplierLimitEdit__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Month</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>SupplierLimitEdit_Month</relationshipName>
    <type>Lookup</type>
</CustomField>