force-app/main/default/objects/SupplierLimitEdit__c/fields/NewLimit__c.field-meta.xml
<CustomField>
    <fullName>NewLimit__c</fullName>
    <label>Змінений ліміт</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>