force-app/main/default/objects/SupplierLimitEdit__c/fields/OriginalLimit__c.field-meta.xml
<CustomField>
    <fullName>OriginalLimit__c</fullName>
    <label>Початковий ліміт</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>