force-app/main/default/objects/SupplierLimitEdit__c/fields/ScrapSupplierLimit__c.field-meta.xml
<CustomField>
    <fullName>ScrapSupplierLimit__c</fullName>
    <label>ScrapSupplierLimit</label>
    <referenceTo>ScrapSupplierLimit__c</referenceTo>
    <relationshipName>SupplierLimitEdit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>