force-app/main/default/objects/SupplierLimitEdit__c/fields/SupplierLimitDetails__c.field-meta.xml
<CustomField>
    <fullName>SupplierLimitDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SupplierLimitDetails</label>
    <referenceTo>SupplierLimitDetails__c</referenceTo>
    <relationshipName>SupplierLimitEdit</relationshipName>
    <type>Lookup</type>
</CustomField>