force-app/main/default/objects/SupplierLimitEdit__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>SupplierLimitEdit_Year</relationshipName>
    <type>Lookup</type>
</CustomField>