force-app/main/default/objects/SupplierLimitEdit__c/fields/YearTxt__c.field-meta.xml
<CustomField>
    <fullName>YearTxt__c</fullName>
    <formula>TEXT(ScrapSupplierLimit__r.YearPick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Рік</label>
    <type>Text</type>
</CustomField>